super escape focus

--- a/jobs/e2e-node.yaml
+++ b/jobs/e2e-node.yaml
@@ -6,4 +6,4 @@
           focus: ''
       - 'e2e-node-{name}':
           name: conformance
-          focus: \[Conformance\]
+          focus: \\\[Conformance\\\]
