--- a/jobs/e2e-node-template.yaml
+++ b/jobs/e2e-node-template.yaml
@@ -13,6 +13,6 @@
             - e2e-node-root
     builders:
       - shell: |
-          ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no dev-tools/scripts/e2e-node.sh {focus}
-          scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -r artifacts artifacts
+          ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@e2e-node.lab.variantweb.net dev-tools/scripts/e2e-node.sh {focus}
+          scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@e2e-node.lab.variantweb.net -r artifacts artifacts
 
