--- a/jobs/e2e-node-template.yaml
+++ b/jobs/e2e-node-template.yaml
@@ -14,5 +14,5 @@
     builders:
       - shell: |
           ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@e2e-node.lab.variantweb.net dev-tools/scripts/e2e-node.sh {focus}
-          scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@e2e-node.lab.variantweb.net -r artifacts artifacts
+          scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@e2e-node.lab.variantweb.net -r /tmp/artifacts artifacts
 
