--- a/playbooks/rhel-subscribe.yml
+++ b/playbooks/rhel-subscribe.yml
@@ -16,6 +16,4 @@
     command: subscription-manager repos \
                --enable="rhel-7-server-rpms" \
                --enable="rhel-7-server-extras-rpms" \
-               --enable="rhel-7-fast-datapath-rpms" \
-               --enable=rhel-7-server-beta-rpms \
-               --enable=rhel-7-server-extras-beta-rpms
+               --enable="rhel-7-fast-datapath-rpms"
