--- a/jobs/cluster-smoke.yaml
+++ b/jobs/cluster-smoke.yaml
@@ -8,6 +8,10 @@
       - '{name}-cluster-smoke':
           name: starter-us-east-1
       - '{name}-cluster-smoke':
+          name: starter-us-east-1a
+      - '{name}-cluster-smoke':
+          name: starter-us-east-1b
+      - '{name}-cluster-smoke':
           name: starter-us-east-2
       - '{name}-cluster-smoke':
           name: starter-us-east-2a
